--- a/src/components/Incentive/Incentive.module.css
+++ b/src/components/Incentive/Incentive.module.css
@@ -61,7 +61,6 @@
   width: 100%;
   max-width: 800px;
   margin-bottom: 40px;
-  margin-top: 5%;
 }
 
 .incentiveImageContainer img {
